--- a/app/globals.css
+++ b/app/globals.css
@@ -6,6 +6,23 @@
   .text-balance {
     text-wrap: balance;
   }
+  ::-webkit-scrollbar {
+    width: 10px;
+    height: 20px;
+  }
+
+  ::-webkit-scrollbar-track {
+    background: hsl(var(--background));
+  }
+
+  ::-webkit-scrollbar-thumb {
+    background: hsl(var(--muted));
+    border: 1px solid hsl(var(--border));
+  }
+
+  ::-webkit-scrollbar-thumb:hover {
+    background: hsl(var(--accent));
+  }
 }
 
 @font-face {
